<resources>
    <string name="app_name">NoteTaker</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="add_note">Add Note</string>
    <string name="save">Save</string>
    <string name="saved">New note saved!</string>
    <string name="not_saved">Note not saved!</string>
    <string name="action_sync">Sync</string>
    <string name="sign_in">Sign-in</string>

    <string name="facebook_application_id" translatable="false">900878527758989</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb900878527758989</string>
    <string name="skip">skip</string>
    <string name="sign_in_default_message">Sign-in to get started</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="name">Name</string>
    <string name="delete">Delete Account</string>
    <string name="signout">Sign out</string>
    <string name="email">Email</string>
</resources>